--- a/report/2.md
+++ b/report/2.md
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+
 # 研究生 第二周
 
 标签（空格分隔）： 报告
